Comments for files(1/2)

--- a/html-files/future.html
+++ b/html-files/future.html
@@ -121,6 +121,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         </div>
     </div>
 </div>
+<!--Script for searchbar to hide results by default-->
 <script src="../js/searchspecific.js"></script>
 
 <!--This is the cover section of page-->
@@ -132,6 +133,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
             <div class="row text-center textfly">
 
                 <div class="col-12 text-center ">
+                    <!-- A rocket animation purely by javascript-->
                     <div class="container rocket" id="rocket">
                         <div id="innerrocket">
                             <!--Image taken from https://www.pinclipart.com/maxpin/iiomi/ -->
@@ -140,10 +142,12 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                         </div>
                     </div>
                 </div>
+                <!--Title text center-->
                 <div class="col-12 text-center">
                     <br><br>
                     <h1>Future Career</h1>
                     <p>View my current course and my future prospect.</p>
+                   <!--Downward arrow-->
                     <!--Icon from BootStrap https://icons.getbootstrap.com/icons/arrow-down-square/-->
                     <img  onclick="window.location.href='future.html#daaareflection';" src="../arrowdown/arrowdown.svg" alt="Icon of arrow down" class="square">
 
@@ -151,11 +155,14 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
             </div>
         </div>
 </div>
+<!-- Start of first section-->
 <div class="container margintop" id="daaareflection">
     <div class="row">
+        <!-- Occupy left half of line for screen above medium,full line for small-->
         <div class="col-md-6 col-sm-12">
+            <!--Subtitle with some colors-->
             <h1>Diploma in<br><span id="type" class="royalblue"></span><span  class="cursor royalblue">|</span></h1>
-
+<!--A backquote quoting text from the Singapore Polytechnic Website-->
             <figure>
 
                 <blockquote class="blockquote fontsize14" >
@@ -175,6 +182,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                 Hence,that is the main reason I chose DAAA as my course.
             </p>
         </div>
+        <!-- Occupy right half of line for screen above medium,full line for small-->
         <div class="col-md-6 col-sm-12 text-end " >
             <!--Image from Singapore Polytechnic Website ,https://www.sp.edu.sg/soc/courses/full-time-diplomas/data-analytics-and-artificial-intelligence-(ai)/overview-->
             <img alt="Image of DAAA Course Info" src="../spphoto/daaacourseinfo.jpg" id="daaaphoto">
@@ -182,19 +190,27 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         </div>
     </div>
 </div>
+<!-- End of first section-->
+<!-- Start of second section-->
 <div class="container-fluid margintop grey">
     <div class="container">
         <div class="row" id="expsp">
+            <!--2 Boxes each occupying 6 grid at small screen ,3 at medium ,6 at large and 3 in extra large-->
             <div class="catt col-xl-3 col-md-3 col-lg-6 col-sm-6" >
+               <!--Card 1-->
                 <div class="card" id='card1' >
                     <div id="card1font">
+                        <!--Front side of card-->
+                        <!--Preview images on top of card-->
                         <img src="../spphoto/singaporepolytechnicfrontview.jpg"  class="card-img-top cardimg1" alt="Image of Singapore Polytechnic ">
                         <div class="card-body">
                             <h3 class="card-title">First Impression</h3>
                         </div>
                     </div>
+                    <!--Back side of card-->
                     <div id="card1backside">
                         <div class="container row aligncard">
+                            <!--Center icon and text-->
                             <div class="text-center">
                                 <!-- Icon from https://github.com/icons8/flat-color-icons-->
                                 <img src="../cardicons/landscape.svg" alt="A icon showing landscape" class="cardimagestyle">
@@ -207,14 +223,19 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                     </div>
                 </div>
             </div>
+            <!--Card 2-->
+            <!--occupying 6 grid at small screen ,3 at medium ,6 at large and 3 in extra large-->
             <div class="catt col-xl-3 col-lg-6 col-md-3 col-sm-6" >
                 <div class="card" id='card2' >
+                <!--Front side of card-->
                     <div id="card2font">
+                        <!--Peeview image at top-->
                         <img src="../spphoto/daaaclassphoto.jpg"  class="card-img-top cardimg1" alt="DAAA/FT/1A/04 AY2021 Class Photo">
                         <div class="card-body">
                             <h3 class="card-title">My Classmates</h3>
                         </div>
                     </div>
+                    <!--Backside side of card-->
                     <div id="card2backside">
                         <div class="container row aligncard">
                             <div class="text-center">
@@ -230,7 +251,9 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                     </div>
                 </div>
             </div>
+            <!-- Text at right of line .Occupy 6 grid for extra large screen ,else full line-->
             <div class="col-xl-6 col-md-12 col-sm-12 text-end">
+
                 <h1><span class="forestgren">Experience </span>In Course</h1>
                 <p>School have started for around 5 months.In this 5 months,I have learned more about proposal writing ,critical thinking , fundamental of computing,Javascript,HTML,CSS,BootStrip5(Front End Web Development) and etc.I have also understood how to use them to help me.I have also learn some Mathematics that is somehow related to my course.In this 5 month ,I have realise that the saying that "Poly is easy"is a scam.In SP,there is a lot of self directed learning and self responsibility.We need do a lot of search up to make ourself to be able to understand further apart from the content taught in lessons.But overall,I think the course is manageable if you are willing to spend effort and time. View more about the experience in SP here.</p>
             </div>
@@ -239,34 +262,41 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
 
     </div>
 </div>
+<!--End of second section-->
+<!--Start of third section-->
 <div class="container margintop">
     <div class="row" id="jobsection">
+        <!-- Occupy left half of line for medium and above screen ,full line for small screen-->
         <div class="col-sm-12 col-md-6">
+            <!--Subtitle with some color-->
             <h1>Future <span class="orangered">Jobs</span> And <span class="purplecolor" >Opportunities</span></h1>
         <p>Well, being in an AI course allows you to be in a lot of sectors in the future as a lot of industries are transforming to become more digitized and AI & data analytics are the key underpinning technologies for transforming these industries like medical, manufacturing, etc. However, I feel that I think I am still aiming to be in the software area as this is my dream from young. I think that this course together with further studies will allow me to be able to integrate AI technology into software and make software smarter to provide convenience to people.
 
         </p>
         </div>
+        <!-- Occupy right half of line for medium and above screen ,full line for small screen-->
         <div class="col-sm-12 col-md-6 text-end">
             <!--Cloud Icon taken from https://iconscout.com/contributors/chamedesign" by Chameleon Design-->
+            <!--Animation here imcorperate with javascript to show process of from grey to color-->
             <img class="greyscale cloudsvg" alt="A image showing cloud computing" src="../prospectphoto/cloudcomputing.svg" id='cloud' >
         </div>
     </div>
 </div>
-
+<!--Toast welcome message-->
 <div class="zindex99 position-fixed bottom-0 end-0 p-3" >
 
     <div class="toast" id="welcome" role="alert"  data-bs-autohide="false" aria-live="assertive" aria-atomic="true" >
+        <!--Header:Profile pic + name +time-->
         <div class="toast-header">
             <img src="../profilepic/profile.jpg"  class="rounded me-2 toastprofile" alt="...">
             <strong class="mr-auto">ZhuoFan</strong>
 
             <small>&nbsp; Now &nbsp;&nbsp;&nbsp;&nbsp;</small>
-
+            <!--Button to dismiss toast-->
             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close">
             </button>
         </div>
-
+        <!--Message-->
         <div class="toast-body">
             Hello! Have fun knowing more about my course and the future prospect.<br>Hope that you can find what you want!! :)
         </div>
