--- a/html-files/secondary.html
+++ b/html-files/secondary.html
@@ -120,6 +120,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         </div>
     </div>
 </div>
+<!--Script for searchbar to hide results by default-->
 <script src="../js/searchspecific.js"></script>
 <!--This is the cover of page-->
 <!--Slideshow element-->
@@ -213,6 +214,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                     </div>
                 </div>
             </div>
+            <!-- Control buttons for next and previous-->
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -275,7 +277,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                 <p>In these 4 years, I think I have grown especially in terms of leadership. My school has transformed me into a leader, till today I am still really thankful to the teachers that have trusted me and given me the opportunity to lead. In 2017, as a Secondary 1 student, I was lucky to get selected to become a junior student councillor which enabled me to learn a lot of things like to take initiative, be more responsible, and speak confidently. I have taken all the morning duties and the events I am participating in seriously. I always get to learn more things as the debrief after every event has allowed me to reflect on things that I have not done so well which enable me to correct myself and be a better leader. In 2019, I was nominated and chosen to be part of the Executive Committee of the 15th Student Council. This means that I will have more responsibilities in hand. As an exco member, I have always tried my best to plan the events as detailed as possible and to execute them smoothly. Through the events I have planned and led, I have a further understanding of leadership skills.I knew more about the responsibility in me.Additionally,I also learn more about proposal making and how to be flexible when carrying out events. I learn to react fast to unexpected situations, I learn to take care of my teammates, I learn to listen to other people’s opinions. While planning and executing events, I also forged strong bonds with my fellow councillors.As a senior , I always tried my best to teach my junior everything I have learned just like what my seniors have taught me. Aside from my student council role, I am also a physics representative for 3 years, a geographic representative for 1 year, and a staff sergeant in NPCC.I am really thankful to the everyone that has trusted me.</p>
           <br><br>
             </div>
-            <!-- table of leadership development ,appear below text at center-->
+            <!-- table of leadership development ,appear below text at center,occupy full line-->
             <div class="col-md-12 col-sm-12">
                 <table class="table table-hover table-bordered border-dark  table-responsive">
                     <thead>
@@ -347,6 +349,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
 <div class="container margintop">
     <div class="row" id="lifelong">
         <!--Photo slideshow component at left occupying half of the line for medium size screen,and full line for small screen-->
+       <!--A 3D slideshow-->
         <div class="col-md-6 col-sm-12">
             <section id="slider">
                 <input type="radio" name="slider" id="s1" checked>
