--- a/html-files/feedback.html
+++ b/html-files/feedback.html
@@ -469,7 +469,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
               <br><br>
                 <input id="submit" class="submit" type="submit"/>
                 <!--User term and condition button-->
-                <button type="button" id="btnmodel" class="btn btn-primary" data-bs-toggle="modal" data-target="#userModal" data-bs-target="#userModal">User Agreement</button>
+                <button type="button" id="btnmodel" class="btn btn-primary" data-bs-toggle="modal" data-target="#userModal" data-bs-target="#userModal">Agreement</button>
               <!--Modal component ,once the button is clicked ,the modal will pop up-->
                 <div class="modal fade modal-dialog-scrollable" id="userModal" tabindex="-1" aria-labelledby="userModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
