--- a/html-files/index.html
+++ b/html-files/index.html
@@ -422,7 +422,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
 
                     </div>
                     <div class="col text-center">
-                        <button type="button" onclick="window.location.href='future.html';" class="btn btn-info">Look at the experience</button>
+                        <button type="button" onclick="window.location.href='future.html';" id="lineargr" class="btn">Look at the experience</button>
                     </div>
                 </div>
                 </div>
