--- a/html-files/about.html
+++ b/html-files/about.html
@@ -24,7 +24,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     <meta name="description"  content="Personal Website | ZhuoFan | I am 17 years old this year.Currently a student studying in Singapore Polytechnic.I love to play badminton and to do coding<br>Click to know more about me:)">
     <meta name="name" content="ZhuoFan">
     <meta name="image" content="profile.jpg">
-    <!---Bootstrap 5 support--->
+    <!---Bootstrap 5 support-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
@@ -145,7 +145,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                 <!--Icon from BootStrap https://icons.getbootstrap.com/icons/arrow-down-square/-->
                 <img  onclick="window.location.href='about.html#aboutmeover'" src="../arrowdown/arrowdown.svg" alt="Icon of arrow down" class="square">
             </div>
-            <!-- Script to determind time ,make animation and show greeting text--->
+            <!-- Script to determind time ,make animation and show greeting text-->
              <script src="../js/detecthouranimation.js"></script>
         </div>
 
