--- a/html-files/feedback.html
+++ b/html-files/feedback.html
@@ -24,7 +24,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     <meta name="description"  content="Personal Website | ZhuoFan | I am 17 years old this year.Currently a student studying in Singapore Polytechnic.I love to play badminton and to do coding<br>Click to know more about me:)">
     <meta name="name" content="ZhuoFan">
     <meta name="image" content="profile.jpg">
-    <!---Bootstrap 5 support--->
+    <!---Bootstrap 5 support-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
@@ -177,7 +177,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
             </div>
         </div>
     </div>
-</div>
+
 <!-- End of feedback wall cover section-->
 <!--Start of first section-->
 <div class="container margintop" id="feedbackform">
@@ -194,7 +194,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         <div class="col-sm-12 col-lg-6">
             <form id="form">
                 <label for="fname" class="h4">First name</label><br>
-                <!---Text box--->
+                <!---Text box-->
                 <input type="text"  class="commonform"  id="fname" name="fname"><br><br>
                 <label class="h4" for="last">Last name</label><br>
                 <!--Selection box componenet-->
@@ -482,7 +482,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                             <!--Body message-->
                             <div class="modal-body">
                                 <p><strong>Please read this carefully.</strong></p>
-                                <!---Expanded text--Text generated using https://www.termsfeed.com/eula-generator\\--->
+                                <!--Expanded text--Text generated using https://www.termsfeed.com/eula-generator\\-->
                                 <h1>End-User License Agreement ("Agreement")</h1>
                                 <h2>Last updated: May 19, 2021</h2>
                                 Please read this End-User License Agreement carefully before clicking the "I've read and agreed to User Agreement and Privacy Policy" button, downloading or using ZhuoFan's Portfolio.
