--- a/html-files/index.html
+++ b/html-files/index.html
@@ -25,7 +25,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     <meta name="description"  content="Personal Website | ZhuoFan | I am 17 years old this year.Currently a student studying in Singapore Polytechnic.I love to play badminton and to do coding<br>Click to know more about me:)">
     <meta name="name" content="ZhuoFan">
     <meta name="image" content="profile.jpg">
-    <!---Bootstrap 5 support--->
+    <!---Bootstrap 5 support-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
@@ -198,7 +198,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                        <button type="button" data-bs-target="#Captions" data-bs-slide-to="9" aria-label="Slide 10"></button>
                        <button type="button" data-bs-target="#Captions" data-bs-slide-to="10" aria-label="Slide 11"></button>
                    </div>
-                   <!--Captions for different image while slideshow--Photo slideshow change every 2 second(2000ms)-->
+                   <!--Captions for different image while slideshow.Photo slideshow change every 2 second(2000ms)-->
                    <div class="carousel-inner">
                        <div class="carousel-item active" data-bs-interval="2000">
                            <img src="../secondaryschoolphoto/presentationcarousel/soop2019.jpg"  class="d-block w-100 photocarousel" alt="Image of Secondary One Orientation Programme 2019 ">
